# rotten-tomatoes-api

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
app/: __init__.py  config.py  main.py
app/api/: dependencies.py  routes.py
app/db/: postgres.py
app/models/: schemas.py
app/services/: auth.py  browse_options.py  cache.py  curated_lists.py  list_cache.py  list_scraper.py  scraper.py  wikidata.py
docs/plans/: 2025-12-28-batch-endpoint-design.md  2025-12-28-rt-api-design.md  2025-12-29-rt-lists-design.md  2025-12-29-rt-lists-implementation.md  2025-12-29-test-suite-design.md  2025-12-29-test-suite-implementation.md
tests/: conftest.py
tests/integration/: test_admin_endpoints.py  test_batch_endpoint.py  test_health.py  test_list_endpoints.py  test_movie_endpoint.py
tests/live/: __init__.py  test_live_scraper.py  test_live_wikidata.py
tests/unit/: test_auth.py  test_browse_options.py  test_cache.py  test_curated_lists.py
